--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "babel server --out-dir dist",
     "prepublish": "npm run build",
     "start": "micro-serve -p 8080 dist/",
-    "dev": "babel-node run.js"
+    "dev": "babel-node run.js",
+    "lint": "eslint ./server"
   },
   "repository": {
     "type": "git",
@@ -28,22 +29,21 @@
     ]
   },
   "dependencies": {
-    "fs-extra": "^4.0.2",
-    "micro": "^9.0.1",
+    "fs-extra": "^7.0.0",
+    "micro": "^9.3.3",
     "micro-core": "^0.4.0",
-    "microrouter": "^3.0.0",
+    "microrouter": "^3.1.3",
     "mustache": "^3.0.0",
     "query-overpass": "^1.5.3",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "winston": "^3.0.0-rc1"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "eslint": "^4.10.0",
-    "micro-core": "^0.4.0"
+    "eslint": "^5.6.1"
   }
 }
